[gd_scene load_steps=34 format=3 uid="uid://5qo3xemxp5ye"]

[ext_resource type="Script" uid="uid://dheg32om0buvb" path="res://scripts/enemy_rook.gd" id="1_yfr6m"]
[ext_resource type="Texture2D" uid="uid://dc5bubk8dn5la" path="res://assets/corrupted rookcharacter.png" id="2_efvn0"]
[ext_resource type="Texture2D" uid="uid://dm1waa8v5ised" path="res://assets/enemyhealthempty.png" id="3_2egy8"]
[ext_resource type="Texture2D" uid="uid://cb4j80up7t5s5" path="res://assets/enemyhealthfull.png" id="4_3dwf6"]
[ext_resource type="Texture2D" uid="uid://c0nc26vipw1it" path="res://assets/rook shield.png" id="5_efvn0"]
[ext_resource type="Texture2D" uid="uid://dv30pdokt8js4" path="res://assets/shieldbar empty.png" id="6_3dwf6"]
[ext_resource type="Texture2D" uid="uid://dcvt3mpiclqd1" path="res://assets/shieldbar full.png" id="7_gwe81"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gwe81"]
radius = 16.0
height = 64.0

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.36602142, 1),
"update": 0,
"values": [Vector2(0.07, 0.13), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.36602142, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "walk"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.11, 0.09), Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"jump": SubResource("Animation_dqkch"),
&"walk": SubResource("Animation_g2els")
}

[sub_resource type="Animation" id="Animation_efvn0"]
resource_name = "shieldbreak"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Shield/Shield Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.3186402, 1),
"update": 0,
"values": [Vector2(0.4, 0.4), Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Shield/Shield Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.45062512, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Shield/ShieldBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(0.40191504, 1.5, 1),
"update": 0,
"values": [Vector2(-34, -120), Vector2(-34, -147.19), Vector2(-34, -39.22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Shield/ShieldBar:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1.5),
"update": 0,
"values": [0.0, 0.5183627878423157]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Shield/ShieldBar:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2egy8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Shield/Shield Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.4, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Shield/Shield Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Shield/ShieldBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-34, -120)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Shield/ShieldBar:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Shield/ShieldBar:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3dwf6"]
_data = {
&"RESET": SubResource("Animation_2egy8"),
&"shieldbreak": SubResource("Animation_efvn0")
}

[sub_resource type="Animation" id="Animation_pn8is"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cbncm"]
resource_name = "death"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.99999994, 0.1254001, 0.07805187, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r47x2"]
_data = {
&"RESET": SubResource("Animation_pn8is"),
&"death": SubResource("Animation_cbncm")
}

[sub_resource type="Animation" id="Animation_ywpfa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t0c4q"]
resource_name = "hurt"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(0.3077861, 1),
"update": 0,
"values": [Vector2(0.115, 0.115), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.99998075, 0.32389256, 0.26108572, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kymhc"]
_data = {
&"RESET": SubResource("Animation_ywpfa"),
&"hurt": SubResource("Animation_t0c4q")
}

[sub_resource type="Animation" id="Animation_kymhc"]
length = 0.001

[sub_resource type="Animation" id="Animation_r47x2"]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(1.9318733, 0.57434916, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(40, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("../Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(2.143547, 0.5176324, 1),
"update": 0,
"values": [0.0, 3.141592653589793, 6.283185307179586]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hurtbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(1.9318733, 0.57434916, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(40, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bxt6w"]
resource_name = "attack_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(1.9318733, 0.57434916, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-80, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(2.143547, 0.5176324, 1),
"update": 0,
"values": [0.0, -3.141592653589793, -6.283185307179586]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hurtbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3),
"transitions": PackedFloat32Array(1.9318733, 0.57434916, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-80, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bxt6w"]
_data = {
&"RESET": SubResource("Animation_kymhc"),
&"attack": SubResource("Animation_r47x2"),
&"attack_left": SubResource("Animation_bxt6w")
}

[sub_resource type="Animation" id="Animation_ldb65"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lbalf"]
resource_name = "footstool"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.05), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 19.105), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.99998075, 0.3238926, 0.26108575, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j8fct"]
_data = {
&"RESET": SubResource("Animation_ldb65"),
&"footstool": SubResource("Animation_lbalf")
}

[sub_resource type="Animation" id="Animation_m0fjq"]
resource_name = "shielddamage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield/ShieldBar:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.40612632, 1),
"update": 0,
"values": [Vector2(0.16, 0.16), Vector2(0.135, 0.135)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shield/ShieldBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.40612632, 1),
"update": 0,
"values": [Vector2(-39.605, -124.45), Vector2(-34, -120)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shield/Shield Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.19999999),
"transitions": PackedFloat32Array(0.42044812, 1),
"update": 0,
"values": [Vector2(0.42, 0.42), Vector2(0.4, 0.4)]
}

[sub_resource type="Animation" id="Animation_2m4t4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield/ShieldBar:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.135, 0.135)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shield/ShieldBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-34, -120)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shield/Shield Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.4, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gtpts"]
_data = {
&"RESET": SubResource("Animation_2m4t4"),
&"shielddamage": SubResource("Animation_m0fjq")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m0fjq"]
radius = 22.307693
height = 44.615387

[sub_resource type="CircleShape2D" id="CircleShape2D_2egy8"]
radius = 161.00311

[node name="EnemyRook" type="CharacterBody2D" groups=["Goon"]]
script = ExtResource("1_yfr6m")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 6.2831855
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_efvn0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gwe81")

[node name="UpdatePositionTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="WalkAnimation" type="AnimationPlayer" parent="." groups=["Goon"]]
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}
playback_default_blend_time = 0.5
speed_scale = 0.3

[node name="ShieldDestroyAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../UpdatePositionTimer")
libraries = {
&"": SubResource("AnimationLibrary_3dwf6")
}

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../WalkAnimation")
libraries = {
&"": SubResource("AnimationLibrary_r47x2")
}

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kymhc")
}

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../DeathAnimation")
libraries = {
&"": SubResource("AnimationLibrary_bxt6w")
}

[node name="FootstoolAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j8fct")
}

[node name="ShieldDamage" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gtpts")
}

[node name="HealthBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -25.0
offset_top = -59.000004
offset_right = 475.0
offset_bottom = 40.999996
scale = Vector2(0.1, 0.1)
max_value = 50.0
value = 50.0
texture_under = ExtResource("3_2egy8")
texture_progress = ExtResource("4_3dwf6")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1.5384617, 10.000001)
shape = SubResource("CapsuleShape2D_m0fjq")

[node name="Shield" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
shape = SubResource("CircleShape2D_2egy8")

[node name="Shield Sprite" type="Sprite2D" parent="Shield"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_efvn0")

[node name="ShieldBar" type="TextureProgressBar" parent="Shield"]
visible = false
offset_left = -34.0
offset_top = -120.0
offset_right = 466.0
offset_bottom = 380.0
scale = Vector2(0.135, 0.135)
value = 100.0
fill_mode = 3
texture_under = ExtResource("6_3dwf6")
texture_progress = ExtResource("7_gwe81")

[connection signal="timeout" from="UpdatePositionTimer" to="." method="_on_update_position_timer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="area_entered" from="Shield" to="." method="_on_shield_area_entered"]
[connection signal="body_entered" from="Shield" to="." method="_on_shield_body_entered"]
[connection signal="body_exited" from="Shield" to="." method="_on_shield_body_exited"]
